# TimeSeries

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
Matlab_Files/PredictMod/: Contents.m  calcindex.m  chisqrdf.m  chkfig.m  cliprec.m  estimlm.m  factortst.mat  gcombvec.m  getGH.m  getGHarma.m  getGHarmax.m  getGHarx.m  getGHbjtf.m  getGHdf.m  getGHdfarma.m  getGHdfbjtf.m  getmX.m  getmXarma.m  getmXarmax.m  getmXarx.m  getmXbjtf.m  getmXregr.m  gpac.m  impest.m  initrand.m  initrandn.m  initzero.m  jacobian.m  makerow.m  multiAnal.m  multiChi.m  newarma.m  newarmax.m  newarx.m  newbjtf.m  newrec.m  newregr.m  parcor.m  partoacf.m  plotgpac.asv  (+28 more)
Matlab_Files/PredictMod/@predictmodel/: disp.m  display.m  estimate.m  init.m  predict.m  (+4 more)
TimeSeriesSRC/: __init__.py
TimeSeriesSRC.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
TimeSeriesSRC/Model/: QAModel.py  __init__.py  estimate.py  estimlm.py  jacobian.py  model.py  pmodaic.py  pmodbic.py  pmoddisp.py  pmodmse.py  pmodsim.py  selpmod.py
TimeSeriesSRC/NoteBooks/: DemoHelperFunctions.ipynb  pmdemo.ipynb
TimeSeriesSRC/TestData/: Series_A_Chemical_Concentration.csv  Series_B1_IBM_Stock_Daily.csv  Series_B_IBM_Stock.csv  Series_C_Chemical_Temperature.csv  Series_D_Chemical_Viscosity.csv  Series_E_Sunspot_Numbers.csv  Series_F_Chemical_Yields.csv  Series_J_Gas_Furnace.csv  eprepost.mat  etest.mat  furnace.csv  json_data.json  sample2000.csv  utest.mat  yimpest.csv
TimeSeriesSRC/TimeSeries/: QAscript.py  TSAnalysis.py  __init__.py
TimeSeriesSRC/basefunctions/: calcindex.py  chisqrdf.py  cliprec.py  gcombvec.py  gpac.py  impest.py  makerow.py  multiAnal.py  multiChi.py  newrec.py  parcor.py  partoacf.py  plotacf.py  plotgpac.py  sdiff.py  sepym.py  uniAnal.py  uniChi.py  xcorr.py
TimeSeriesSRC/test_Scripts/: test_chisqrdf.py  test_gpac.py  test_makerow.py  test_parcor.py  test_partoacf.py  test_sdiff.py  test_xcorr.py
TimeSeriesSRC/testdata/: furnace.mat  sample100.csv  sample100.mat  testimpest.mat  uimpest.csv  uprepost.mat  ybjtf.mat
TimeSeriesSRC/testfunctions/: test_makerow.py  test_xcorr.py
docs/: Makefile  UserGuide.md  changelog.rst  conf.py  index.rst  notebooks.rst  requirements.txt
docs/_static/: custom.css
docs/api/: basefunctions.rst  index.rst  model.rst  timeseries.rst  toplevel.rst
docs/guide/: examples.rst  index.rst  installation.rst  models.rst  quickstart.rst
tests/: __init__.py  test_basefunctions.py  test_models.py
(+44 files in other folders)
